--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/free-regular-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "autobahn": "^18.10.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.6.1",
     "ngx-bootstrap": "^3.1.3",
